--- a/Problemas_teoricos.ipynb
+++ b/Problemas_teoricos.ipynb
@@ -168,6 +168,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### código"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Importamos las librerías necesarias"
    ]
   },
@@ -261,8 +269,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Cúal es $\\mu$ para las 3 monedas escogidas\n",
-    "\n",
+    "##### a) Cúal es $\\mu$ para las 3 monedas escogidas\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Sería de 0.5 dado que son monedas justas"
    ]
   },
@@ -271,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Repite este experimento un número considerado de veces para conseguir varias instancias y plotear  los histogramas de distribución de  $v_1$, $v_{rand}$ y $v_{min}$"
+    "##### b) Repite este experimento un número considerado de veces para conseguir varias instancias y plotear  los histogramas de distribución de  $v_1$, $v_{rand}$ y $v_{min}$"
    ]
   },
   {
@@ -349,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Usando el punto b), estima $P[|v-\\mu|>\\epsilon]$ como función de $\\epsilon$, junto con la cota de he Hoeffdin $2e^{-2\\epsilon^2N}$"
+    "##### c) Usando el punto b), estima $P[|v-\\mu|>\\epsilon]$ como función de $\\epsilon$, junto con la cota de he Hoeffdin $2e^{-2\\epsilon^2N}$"
    ]
   },
   {
@@ -429,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d) Qué monedas obedecen a la cota de Hoeffdin. \n"
+    "##### d) Qué monedas obedecen a la cota de Hoeffdin. \n"
    ]
   },
   {
@@ -455,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) ¿Puede S producir una hipótesis que esté garantizada de tener un mejor desempeño que al azar en cualquier punto fuera de D?"
+    "##### a) ¿Puede S producir una hipótesis que esté garantizada de tener un mejor desempeño que al azar en cualquier punto fuera de D?"
    ]
   },
   {
@@ -471,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Supongamos, para el resto del ejercicio, que todos los ejemplos en D tienen $y_n$ = 1. ¿Es posible que la hipótesis que produce C resulte ser mejor que la hipótesis que produce S?"
+    "##### b) Supongamos, para el resto del ejercicio, que todos los ejemplos en D tienen $y_n$ = 1. ¿Es posible que la hipótesis que produce C resulte ser mejor que la hipótesis que produce S?"
    ]
   },
   {
@@ -487,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Si p = 0.9, ¿cuál es la probabilidad de que S produzca una hipótesis mejor que C?"
+    "##### c) Si p = 0.9, ¿cuál es la probabilidad de que S produzca una hipótesis mejor que C?"
    ]
   },
   {
@@ -503,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d) ¿Existe algún valor de p para el cual sea más probable que C produzca una hipótesis mejor que S?"
+    "##### d) ¿Existe algún valor de p para el cual sea más probable que C produzca una hipótesis mejor que S?"
    ]
   },
   {
@@ -539,12 +554,6 @@
    "source": [
     "La mejor opción entre las mencionadas es (c). No se puede garantizar (a), ya que la función objetivo puede ser complicada de tratar, y por la misma razón, no se puede prometer (b) con una alta probabilidad de que la hipótesis g se aproxime a f. Sin embargo, si realmente se puede aprender de los datos, según la desigualdad de Hoeffding, se puede asegurar que g se acerque a f debido a la gran cantidad de puntos de datos disponibles. En particular, la probabilidad de que la diferencia entre el error dentro de la muestra y el error fuera de la muestra sea mayor a un valor dado ε es muy baja. Con un ε de alrededor de 0.06, esta probabilidad es casi del 0%, lo que implica que el error dentro y fuera de la muestra estarán separados en un rango de aproximadamente 0.06 con una alta probabilidad."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
